--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "mongoose": "^8.14.3"
+    "mongoose": "^8.14.3",
+    "notes-app": "file:.."
   },
   "name": "backend",
   "version": "1.0.0",
